--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-router": "^6.14.1",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.1",
     "simpl-schema": "^3.4.1",
     "sweetalert": "^2.1.2",
