--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -9,5 +9,10 @@
     { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
+  ],
+
+  "defaultPrograms": [
+    { "program": "program", "school": "school", "country": "country", "region": "region", "description": "description", "image": "image"}
   ]
 }
+
